# fastapi-music

./: .dockerignore  .env.example  .gitignore  ADMIN_SETUP.md  API_V3_COMPLETED_SONGS.md  API_V3_DOCUMENTATION.md  BACKEND_API_REQUIREMENTS.md  DEPENDENCY_UPDATE_GUIDE.md  FRONTEND_IMPLEMENTATION_GUIDE.md  README.md  README_FINAL.md  README_MAIN.md  README_SIMPLE.md  WORKFLOW_IMPLEMENTATION.md  debug_formats.py  fastapi_music.db  firebase_auth_test_suite.py  generate_admin_password.py  main.py  migrate_to_mysql.py  pyproject.toml  requirements.txt  test_domain_detection.html  test_download.py  test_ffmpeg.py  test_new_video.py  test_search.py  test_streaming.html  test_v3_new.py  test_youtube_workflow.py  test_youtube_workflow_fixed.py  web.config
app/: __init__.py
app/config/: admin.py  config.py  database.py
app/controllers/: auth.py  favorite_controller.py  playlist_controller.py  song_controller.py  ytmusic_controller.py
app/internal/: __init__.py
app/models/: errors.py  playlist.py  song.py  user.py  user_songs.py
app/routes/: auth.py  favorite_routes.py  playlist_routes.py  router.py  song_routes.py  user.py  ytmusic_routes.py
app/schemas/: auth.py  base.py  playlist.py  song.py
app/services/: favorite_service.py  firebase_service.py  playlist_service.py  youtube_service.py  ytmusic_service.py
app_v3/config/: database.py
app_v3/controllers/: auth.py  song_controller.py
app_v3/models/: song.py
app_v3/routes/: auth.py  router.py  song_routes.py
app_v3/services/: youtube_service.py
docker/: Dockerfile  docker-compose.yml
(+59 files in other folders)
