[project]
name = "fastapi-music"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "cloudinary>=1.44.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "firebase-admin>=6.8.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
    "yt-dlp>=2024.12.13",
]
